--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h1>Ross</h1>
             <p>Web Developer | Cheater | Bot Hoster</p>
             <p>Republic of Taiwan</p>
+            <p>18 year old</p>
             <p>Team Fortress 2少數台灣Cheater/Bot hoster</p>
             <p>就有些人書沒有讀好 一直嘲諷"Taiwan is not country"</p>
             <p>那你跟Nigga有什麼區別?</p>
