--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <p>不爽還玩不贏 我快笑死</p>
             <ul>
                 <li><strong>HvH Server:</strong> <a href="https://discord.gg/MZwEe5hdbV">HK</a></li>
+                <li><strong>HvH Server:</strong> <a href="https://steamhistory.net/id/76561198872135447">戰績</a></li>
             </ul>
         </div>
     </div>
